--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 and Applications that leads to the success of the overall 
                 product
               </p>
-              <a href="#" class="btn">Projects</a>
+              <a href="#projects" class="btn">Projects</a>
             </div>
           </div>
         </section>
