--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="project-card">
               <img src="/Port-demo/public/port.png" alt="Proyecto 1" class="project-image">
               <div class="project-description">
-                <p>Portafolio.</p>
+                <p>Landing Page</p>
                 <a href="https://proyecto-ds-5.vercel.app/" class="btn">Ver Proyecto</a>
               </div>
             </div>
@@ -109,10 +109,39 @@
               <img src="/Port-demo/public/ecommers.png" alt="Proyecto 2" class="project-image">
               <div class="project-description">
                 <p>E-Commerce.</p>
-                <a href="https://proyecto-ds-5.vercel.app/" class="btn">Ver Proyecto</a>
+                <a href="https://proyecto-ds-5.vercel.app/" target="_blank" class="btn">Ver Proyecto</a>
               </div>
+            </div> 
+            <div class="project-card">
+              <img src="/Port-demo/public/Logo.png" alt="Proyecto 3" class="project-image">
+              <div class="project-description">
+                <p>Logo HCB.</p>
+                <a href="https://utpac-my.sharepoint.com/:i:/g/personal/derek_britton_utp_ac_pa/EYKPVj0liTZJnJWaqojqwn0B6sOKRgNBOH255gJ6FaAuvw?e=ulH8fg" 
+                target="_blank" class="btn">Ver Proyecto</a>
+              </div>
+            </div> 
+            <div class="project-card">
+              <img src="/Port-demo/public/Flayer.png" alt="Proyecto 4" class="project-image">
+              <div class="project-description">
+                <p>Flayer HCB.</p>
+                <a href="https://utpac-my.sharepoint.com/:i:/g/personal/derek_britton_utp_ac_pa/Efj25ZKkl7xEr77Z-0GRPM4B0kkQV5-hyDvZQGrtSjVinQ?e=gDG2ae" 
+                target="_blank" class="btn">Ver Proyecto</a>
+              </div>
+            </div> 
+            <div class="documents-container">
+              <div class="document-card">
+                <p>Cuña Publicitaria</p>
+                <a href="https://utpac-my.sharepoint.com/:v:/g/personal/derek_britton_utp_ac_pa/Eegj1B4fE5JLrbXfDbYUAFkBUBXaeh-eMFbKp97e3z6MOQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=cHZFdR" 
+                target="_blank" class="btn">Escuchar</a>
+              </div> 
             </div>
-            
+            <div class="documents-container">
+              <div class="document-card">
+                <p>Propuesta HCB</p>
+                <a href="https://utpac-my.sharepoint.com/:b:/g/personal/derek_britton_utp_ac_pa/EeH8sKkSkO1Er3_-p-Mp0h8B60QF0q16y0EonPlirfwfjA?e=WY0n1l" 
+                target="_blank" class="btn">Leer Propuesta</a>
+              </div> 
+            </div>
           </div>
         </section>
 
@@ -146,7 +175,7 @@
 
       <aside class="sidebar" id="sidebar">
         <nav class="menu">
-          <h1 class="menu-header">Derek</h1>
+          <h1 class="menu-header">D.B</h1>
 
           <div class="menu-item nav-active" data-tooltip="Home">
             <a href="#home">
@@ -190,7 +219,6 @@
           </a>
           </div>
         </nav>
-        <!-- toggle menu -->
         
       </aside>
     </div>
