Cambio de ruta de img 2

--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
           <h2 class="tt2">Projects</h2>
           <div class="projects-container">
             <div class="project-card">
-              <img src="/public/port.png" alt="Proyecto 1" class="project-image">
+              <img src="/Portafolio-v2/public/port.png" alt="Proyecto 1" class="project-image">
               <div class="project-description">
                 <p>Landing Page</p>
                 <a href="https://proyecto-ds-5.vercel.app/" class="btn">Ver Proyecto</a>
               </div>
             </div>
             <div class="project-card">
-              <img src="/public/ecommers.png" alt="Proyecto 2" class="project-image">
+              <img src="/Portafolio-v2/public/ecommers.png" alt="Proyecto 2" class="project-image">
               <div class="project-description">
                 <p>E-Commerce.</p>
                 <a href="https://proyecto-ds-5.vercel.app/" target="_blank" class="btn">Ver Proyecto</a>
               </div>
             </div> 
             <div class="project-card">
-              <img src="/public/Logo.png" alt="Proyecto 3" class="project-image">
+              <img src="/Portafolio-v2/public/Logo.png" alt="Proyecto 3" class="project-image">
               <div class="project-description">
                 <p>Logo HCB.</p>
                 <a href="https://utpac-my.sharepoint.com/:i:/g/personal/derek_britton_utp_ac_pa/EYKPVj0liTZJnJWaqojqwn0B6sOKRgNBOH255gJ6FaAuvw?e=ulH8fg" 
@@ -121,7 +121,7 @@
               </div>
             </div> 
             <div class="project-card">
-              <img src="/public/Flayer.png" alt="Proyecto 4" class="project-image">
+              <img src="/Portafolio-v2/public/Flayer.png" alt="Proyecto 4" class="project-image">
               <div class="project-description">
                 <p>Flayer HCB.</p>
                 <a href="https://utpac-my.sharepoint.com/:i:/g/personal/derek_britton_utp_ac_pa/Efj25ZKkl7xEr77Z-0GRPM4B0kkQV5-hyDvZQGrtSjVinQ?e=gDG2ae" 
