Add LandingPage to projects

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
           <h2 class="tt2">Projects</h2>
           <div class="projects-container">
             <div class="project-card">
-              <img src="/Portafolio-v2/public/port.png" alt="Proyecto 1" class="project-image">
+              <img src="/Portafolio-v2/public/HCB.png" alt="Proyecto 1" class="project-image">
               <div class="project-description">
                 <p>Landing Page</p>
-                <a href="https://proyecto-ds-5.vercel.app/" class="btn">Ver Proyecto</a>
+                <a href="https://drek003.github.io/LandingPage-HCB/" class="btn">Ver Proyecto</a>
               </div>
             </div>
             <div class="project-card">
