--- a/index.html
+++ b/index.html
@@ -99,19 +99,26 @@
           <h2 class="tt2">Projects</h2>
           <div class="projects-container">
             <div class="project-card">
-              <img src="/Portafolio-v2/public/HCB.png" alt="Proyecto 1" class="project-image">
+              <img src="/Portafolio-v2/public/" alt="Proyecto 1" class="project-image">
               <div class="project-description">
-                <p>Landing Page</p>
-                <a href="https://drek003.github.io/LandingPage-HCB/" class="btn">Ver Proyecto</a>
+                <p>Gestor de Empleados</p>
+                <a href="https://github.com/Drek003/Gestor-de-Empleados/tree/dev" class="btn">Ver Proyecto</a>
               </div>
             </div>
-            <div class="project-card">
+                        <div class="project-card">
               <img src="/Portafolio-v2/public/ecommers.png" alt="Proyecto 2" class="project-image">
               <div class="project-description">
                 <p>E-Commerce.</p>
                 <a href="https://proyecto-ds-5.vercel.app/" target="_blank" class="btn">Ver Proyecto</a>
               </div>
             </div> 
+            <div class="project-card">
+              <img src="/Portafolio-v2/public/HCB.png" alt="Proyecto 3" class="project-image">
+              <div class="project-description">
+                <p>Landing Page</p>
+                <a href="https://drek003.github.io/LandingPage-HCB/" class="btn">Ver Proyecto</a>
+              </div>
+            </div>
           </div>
         </section>
       </div>
