--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                   <span>Github</span>
                 </div>
                 <div class="skill">
-                  <i class="fa-brands fa-figma"></i>
-                  <span>Figma</span>
+                  <i class="fa-brands fa-php"></i>
+                  <span>PHP</span>
                 </div>
                 <div class="skill">
                   <i class="fa-brands fa-java"></i>
@@ -96,29 +96,32 @@
         </section>
 
         <section id="projects">
-          <h2 class="tt2">Projects</h2>
-          <div class="projects-container">
-            <div class="project-card">
-              <img src="/Portafolio-v2/public/" alt="Proyecto 1" class="project-image">
-              <div class="project-description">
-                <p>Gestor de Empleados</p>
-                <a href="https://github.com/Drek003/Gestor-de-Empleados/tree/dev" class="btn">Ver Proyecto</a>
+          <h2 class="tt2">Selected Projects</h2><br
+          <div class="projects-list">
+            <div class="project-list-item" data-img="/Portafolio-v2/public/gestor.png">
+              <span class="project-index">01.</span>
+              <div>
+                <a href="https://github.com/Drek003/Gestor-de-Empleados/tree/dev" target="_blank" class="project-title">Gestor de Empleados</a>
+                <div class="project-tech">JS • PHP • MySQL</div>
               </div>
             </div>
-                        <div class="project-card">
-              <img src="/Portafolio-v2/public/ecommers.png" alt="Proyecto 2" class="project-image">
-              <div class="project-description">
-                <p>E-Commerce.</p>
-                <a href="https://proyecto-ds-5.vercel.app/" target="_blank" class="btn">Ver Proyecto</a>
-              </div>
-            </div> 
-            <div class="project-card">
-              <img src="/Portafolio-v2/public/HCB.png" alt="Proyecto 3" class="project-image">
-              <div class="project-description">
-                <p>Landing Page</p>
-                <a href="https://drek003.github.io/LandingPage-HCB/" class="btn">Ver Proyecto</a>
+            <div class="project-list-item" data-img="/Portafolio-v2/public/ecommers.png">
+              <span class="project-index">02.</span>
+              <div>
+                <a href="https://proyecto-ds-5.vercel.app/" target="_blank" class="project-title">E-Commerce</a>
+                <div class="project-tech">Astro • JS • CSS</div>
               </div>
             </div>
+            <div class="project-list-item" data-img="/Portafolio-v2/public/HCB.png">
+              <span class="project-index">03.</span>
+              <div>
+                <a href="https://drek003.github.io/LandingPage-HCB/" target="_blank" class="project-title">Landing Page</a>
+                <div class="project-tech">HTML • CSS • JS</div>
+              </div>
+            </div>
+          </div>
+          <div class="project-preview" id="project-preview">
+            <img src="" alt="Preview" id="preview-img" />
           </div>
         </section>
       </div>
