--- a/index.html
+++ b/index.html
@@ -18,38 +18,36 @@
         <section id="home">
           <div class="home">
             <div class="home-content">
-              <h1 class="tt">Hi, I'm Derek Britton</h1>
-              <p class="txt1">A Oriented Web Developer building and managing Websites<br> 
-                and Applications that leads to the success of the overall 
-                product
+              <h1 class="tt">Hola, soy Derek Britton</h1>
+              <p class="txt1">Un Desarrollador de software, construyendo y gestionando Sitios Web<br> 
+                y Aplicaciones que conducen al éxito del producto en general
               </p>
-              <a href="#projects" class="btn">Projects</a>
+              <a href="#projects" class="btn">Proyectos</a>
             </div>
           </div>
         </section>
         
         <section id="about">
           <div class="title-about">
-            <h1 class="tt2">About Me</h1>
+            <h1 class="tt2">Sobre Mí</h1>
               <span class="tt2-sub">
-                Here you will find more information about me, 
-                what I do, and my current skills mostly in 
-                terms of programming and technology
+                Aquí encontrarás más información sobre mí, 
+                lo que hago, y mis habilidades actuales principalmente en 
+                términos de programación y tecnología
               </span>
           </div>
             <div class="about-content">
             <div class="about-container">
               <div class="about-text">
-                <h3>Who am I?</h3>
+                <h3>¿Quién soy?</h3>
                 <p>
-                  I'm a software developer who builds and manages the front-end 
-                  of websites and applications that lead to overall product success. 
-                  Check out some of my work in the Projects section. 
+                  Soy un estudiante desarrollador de software que construye y gestiona sitios web y aplicaciones que conducen al éxito general del producto. 
+                  Echa un vistazo a algunos de mis trabajos en la sección de Proyectos. 
                 </p>
                 <p>
-                  I am open to job/project opportunities where I can contribute, 
-                  learn and grow. If you have a good opportunity that matches my skills 
-                  and experience, then feel free to contact me.
+                  Estoy abierto a oportunidades de trabajo/proyectos donde pueda contribuir, 
+                  aprender y crecer. Si tienes una buena oportunidad que coincida con mis habilidades 
+                  y experiencia, entonces siéntete libre de contactarme.
                 </p>
               </div>
             
