--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="about-text">
                 <h3>¿Quién soy?</h3>
                 <p>
-                  Soy un estudiante desarrollador de software que construye y gestiona sitios web y aplicaciones que conducen al éxito general del producto. 
+                  Soy un estudiante de desarrollador de software que construye y gestiona sitios web y aplicaciones que conducen al éxito general del producto. 
                   Echa un vistazo a algunos de mis trabajos en la sección de Proyectos. 
                 </p>
                 <p>
@@ -68,8 +68,8 @@
                   <span>JavaScript</span>
                 </div>
                 <div class="skill">
-                  <i class="fa-solid fa-rocket"></i>
-                  <span>Astro</span>
+                  <i class="fa-brands fa-react"></i>
+                  <span>React</span>
                 </div>
                 <div class="skill">
                   <i class="fa-brands fa-git-alt"></i>
